Resolved issue with text being aligned center

--- a/web/web-frontend/src/css/App.css
+++ b/web/web-frontend/src/css/App.css
@@ -30,7 +30,6 @@ body {
   margin: 0;
   position: relative;
   color: #222222;
-  text-align: center;
   background-color: #FFF;
 }
 
